--- a/public/index.html
+++ b/public/index.html
@@ -107,28 +107,27 @@
     <p class="subtitle">AI-Powered Insights for Saudi Arabia Car Rental Market</p>
     
     <div class="dataset-info">
-      <strong>Dataset Overview:</strong> 12,575 records covering car rental pricing across Saudi Arabia
-      <br><strong>Entities:</strong> Budget Saudi, Key, Yelo, Sixt, Hanco, Lumi
+      <strong>Dataset Overview:</strong> 30,367 records covering car rental pricing across Saudi Arabia
+      <br><strong>Entities:</strong> Lumi, Theeb, Budget Saudi, Key, Yelo, Sixt, Hanco
       <br><strong>Coverage:</strong> Multiple cities, vehicle categories, and rental durations
     </div>
 
     <div class="examples">
       <h3>📊 Sample Questions You Can Ask:</h3>
-      <div class="example-query" onclick="fillQuestion(this)">Which competitor has the lowest average prices for Toyota Yaris?</div>
-      <div class="example-query" onclick="fillQuestion(this)">Compare pricing between Riyadh and Jeddah for economy cars</div>
-      <div class="example-query" onclick="fillQuestion(this)">What are the most expensive car models by group in the dataset?</div>
-      <div class="example-query" onclick="fillQuestion(this)">Show me rental price trends by duration (1 day vs 7 days vs 30 days)</div>
-      <div class="example-query" onclick="fillQuestion(this)">Which locations have the highest price variation across competitors?</div>
-      <div class="example-query" onclick="fillQuestion(this)">Analyze airport vs downtown pricing differences</div>
+      <div class="example-query" onclick="fillQuestion(this)">Which Entity has the lowest average prices for vehicle (eg. Toyota Hiace Passenger Van)?</div>
+      <div class="example-query" onclick="fillQuestion(this)">Which entity dominates each vehicle group (e.g., economy, SUV, luxury) in terms of pricing advantage</div>
+      <div class="example-query" onclick="fillQuestion(this)">Who is the expensive rental company in each major city based on price competitiveness?</div>
+      <div class="example-query" onclick="fillQuestion(this)">Analyze Downtown vs other location_type pricing differences</div>
+      <div class="example-query" onclick="fillQuestion(this)">What are the key drivers behind price differences? How does pricing vary by branch location, vehicle group, and vehicle make/model?</div>
     </div>
 
     <textarea id="question" placeholder="Ask your question about car rental competitor analysis...
 
 Examples:
-- Compare Budget Saudi vs Sixt pricing for SUVs
-- Which city has the most competitive pricing?
-- Show pricing analysis for group F vehicles
-- What's the average price difference between 1-day and 30-day rentals?"></textarea>
+- Compare Lumi vs other entities pricing for Passenger Vehicles
+- Which branch location has the most competitive pricing?
+- Show pricing analysis for different Vehicle_Groups
+- What's the average price difference between different rental_duration_days?"></textarea>
     <br>
     <button onclick="askGPT()">🔍 Analyze Data</button>
     <div id="response">AI analysis will appear here...</div>
@@ -175,14 +174,15 @@ Examples:
       button.textContent = '🔄 Analyzing...';
       responseElement.innerHTML = '<span class="loading">🤖 AI is analyzing the competitor data...</span>';
 
-      // Prepare data summary for the AI
+      // Prepare data summary for the AI - updated to use new column names
       const dataSummary = {
         total_records: competitorData.length,
-        entities: [...new Set(competitorData.map(r => r.entity))],
-        sample_locations: [...new Set(competitorData.map(r => r['branch location']))].slice(0, 10),
-        vehicle_groups: [...new Set(competitorData.map(r => r.group))],
+        entities: [...new Set(competitorData.map(r => r.Entity))],
+        branch_locations: [...new Set(competitorData.map(r => r['branch location']))].slice(0, 10),
+        vehicle_groups: [...new Set(competitorData.map(r => r.Vehicle_Group))],
         rental_durations: [...new Set(competitorData.map(r => r.rental_duration_days))].sort((a,b) => a-b),
-        sample_models: [...new Set(competitorData.map(r => r.model))].slice(0, 15),
+        location_types: [...new Set(competitorData.map(r => r.location_type))],
+        vehicle_models: [...new Set(competitorData.map(r => r.Vehicle_Make_Model))].slice(0, 15),
         price_range: {
           min: Math.min(...competitorData.map(r => r.price_SAR)),
           max: Math.max(...competitorData.map(r => r.price_SAR)),
@@ -191,16 +191,26 @@ Examples:
       };
 
       // Create comprehensive prompt
-      let prompt = `You are a car rental industry analyst for the Saudi Arabia market. Analyze this competitor dataset and answer the user's question with specific insights, numbers, and actionable recommendations.
+      let prompt = `You are a car rental industry analyst for the Saudi Arabia market.My Entity is Lumi. Analyze this competitor dataset and answer the user's question with specific insights, numbers, and actionable recommendations.
 
 DATASET OVERVIEW:
 - Total Records: ${dataSummary.total_records}
-- Competitors: ${dataSummary.entities.join(', ')}
+- Entities: ${dataSummary.entities.join(', ')}
 - Vehicle Groups: ${dataSummary.vehicle_groups.join(', ')}
 - Rental Durations: ${dataSummary.rental_durations.join(', ')} days
+- Location Types: ${dataSummary.location_types.join(', ')}
 - Price Range: ${dataSummary.price_range.min} - ${dataSummary.price_range.max} SAR (avg: ${dataSummary.price_range.avg} SAR)
-- Sample Locations: ${dataSummary.sample_locations.join(', ')}
-- Sample Models: ${dataSummary.sample_models.join(', ')}
+- Branch Locations: ${dataSummary.branch_locations.join(', ')}
+- Vehicle Models: ${dataSummary.vehicle_models.join(', ')}
+
+COLUMN STRUCTURE:
+- Entity: Company name (e.g., lumi, theeb, budget saudi)
+- branch location: Specific branch location (e.g., Jizan city Branch)
+- rental_duration_days: Number of rental days
+- location_type: Type of location (e.g., Downtown)
+- Vehicle_Make_Model: Vehicle make and model (e.g., TOYOTA Hiace Passenger Van)
+- Vehicle_Group: Category of vehicle (e.g., Passenger Vehicles)
+- price_SAR: Rental price in Saudi Riyals
 
 SAMPLE DATA (first 5 records):
 ${JSON.stringify(competitorData.slice(0, 5), null, 2)}
