--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       padding: 20px; 
       background-color: #f5f5f5;
       margin: 0;
+    .button-group {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
     }
     .container {
       max-width: 1200px;
@@ -78,17 +82,45 @@
       color: #3498db;
       font-style: italic;
     }
-    .button-group {
+    .dataset-metadata {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      padding: 25px;
+      border-radius: 12px;
+      margin: 25px 0;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      line-height: 1.6;
+    }
+    .dataset-metadata h3 {
+      margin: 0 0 20px 0;
+      font-size: 1.3em;
       display: flex;
+      align-items: center;
       gap: 10px;
-      flex-wrap: wrap;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>🚗 Car Rental(Online) Competitor Analysis</h1>
-    <p class="subtitle">AI-Powered Insights for Saudi Arabia Car Rental Market(Online)</p>
+    <p class="subtitle">AI-Powered Insights for Saudi Arabia Car Rental Market (Online)</p>
+    
+    <!-- Dataset Metadata Section -->
+    <div class="dataset-metadata">
+      <h3>📊 Dataset Overview</h3>
+      <p style="margin: 0 0 20px 0; opacity: 0.9;">Comprehensive car rental data covering multiple entities across Saudi Arabia with pricing, location, and vehicle information.</p>
+      
+      <div style="margin-left: 20px;">
+        • <strong style="color: #ffd700;">🏢 Entities:</strong> Lumi, Sixt, Budget Saudi, Theeb, Key, Hanco, Yelo<br><br>
+        • <strong style="color: #ffd700;">📍 Branch Locations:</strong> 278+ unique locations nationwide across Saudi Arabia<br><br>
+        • <strong style="color: #ffd700;">📅 Rental Duration:</strong> 1 Day, 7 Days, 30 Days<br><br>
+        • <strong style="color: #ffd700;">🏛️ Location Types:</strong> Airport, Downtown, Train Station<br><br>
+        • <strong style="color: #ffd700;">🚗 Vehicle Portfolio:</strong> Complete vehicle make and model catalog (e.g., Toyota Corolla, Nissan Altima, BMW X3, Mercedes C-Class)<br><br>
+        • <strong style="color: #ffd700;">🎯 Vehicle Groups:</strong> Sedan, SUV, Luxury, Economy, Compact<br><br>
+        • <strong style="color: #ffd700;">💰 Pricing:</strong> Price in SAR (excluding VAT)<br><br>
+        • <strong style="color: #ffd700;">🎖️ Loyalty Programs:</strong> Availability indicator (Yes/No)
+      </div>
+    </div>
 
     <textarea id="question" placeholder="Ask your question about car rental competitor analysis...
 
