--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🚗 Car Rental(Online) Competitor AI Analysis</h1>
+    <h1>🚗 Car Rental(Online) Competitor AI Analytics</h1>
     <p class="subtitle">AI-Powered Insights for Saudi Arabia Car Rental Market (Online)</p>
     
     <!-- Dataset Metadata Section -->
