Added Dataset metadata 5

--- a/public/index.html
+++ b/public/index.html
@@ -209,7 +209,7 @@
       </div>
       
       <div class="example-question" onclick="copyToTextarea(this)">
-        Analyze Downtown vs other location_type pricing differences
+        List all the entities that provides "Electric" Vehicle_group and also list all the electric vehicle make model
         <div class="copy-feedback">✓ Copied!</div>
       </div>
       
